--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,8 +16,9 @@
             <directory suffix=".php">./app</directory>
         </include>
         <exclude>
+            <directory suffix=".php">./app/Config</directory>
+            <directory suffix=".php">./app/Database</directory>
             <directory suffix=".php">./app/Views</directory>
-            <file>./app/Config/Routes.php</file>
         </exclude>
         <report>
             <clover outputFile="build/logs/clover.xml"/>
