docs: update BaseController

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,12 +1,8 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Call to an undefined method CodeIgniter\\\\HTTP\\\\RequestInterface\\:\\:getPost\\(\\)\\.$#"
-			path: app/Controllers/*.php
-
-		-
 			message: """
-				#^Call to deprecated method getMethod\\(\\) of class CodeIgniter\\\\HTTP\\\\OutgoingRequestInterface\\:
+				#^Call to deprecated method getMethod\\(\\) of class CodeIgniter\\\\HTTP\\\\Request\\:
 				The \\$upper functionality will be removed and this will revert to its PSR\\-7 equivalent$#
 			"""
 			path: app/Controllers/*.php
